--- a/app/DemoApp/Config/actions.ini
+++ b/app/DemoApp/Config/actions.ini
@@ -1,4 +1,4 @@
 [en:home-one]
 action=DemoApp::DefaultController->defaultAction
-[fr:home-fr-one]
+[es:home-fr-one]
 action=DemoApp::DefaultController->defaultAction
